--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,23 +1,25 @@
 <div class="container">
-   
+
     <div class="col-md-6 ">
         <!-- Modal trigger button -->
         <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#modelId">
             Add new
         </button>
-        </div>
-        
-            <div class="col-md-6 ">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <!--<label for="">Tìm sản phẩm</label> -->
-                        <input type="text" style="min-width: 470px; margin-bottom: 12px;" [(ngModel)]="searching" (ngModelChange)="filterResults()"  name="searching" id="" class="form-control"  placeholder="" placeholder="Tìm sản phẩm" mall>
-                    </div>
-                </form>
+    </div>
+
+    <div class="col-md-6 ">
+        <form class="form-inline">
+            <div class="form-group">
+                <!--<label for="">Tìm sản phẩm</label> -->
+                <input type="text" style="min-width: 470px; margin-bottom: 12px;" [(ngModel)]="searching"
+                    (ngModelChange)="filterResults()" name="searching" id="" class="form-control" placeholder=""
+                    placeholder="Tìm sản phẩm" mall>
             </div>
+        </form>
+    </div>
 
     <div class="row mt-3 pl-3 pr-3">
-        <table class="table table-bordered">
+        <table class="parent table table-bordered">
             <thead>
                 <tr>
                     <th>Image</th>
@@ -34,15 +36,17 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of productList ; let i = index">
+                <tr
+                    *ngFor="let item of productList | paginate : { itemsPerPage: tableSize, currentPage: page, totalItems: count } ; let i = index">
                     <td scope="row"><img src="{{item.imageUrl}}" width="50px" alt="" srcset=""></td>
                     <td>{{item.productCode}}</td>
-                    <td><a style="text-decoration: underline; color: rgb(136, 133, 131);" routerLink="/product-details/{{item.productId}}">{{item.productName}}</a> </td>
+                    <td><a style="text-decoration: underline; color: rgb(136, 133, 131);"
+                            routerLink="/product-details/{{item.productId}}">{{item.productName}}</a> </td>
                     <td>{{item.productCategory}}</td>
                     <td>{{item.productSize}}</td>
                     <td>{{item.productColor}}</td>
                     <td>{{item.inStock}}</td>
-                    
+
                     <td>{{item.releaseDate}}</td>
                     <td>{{item.price}}</td>
                     <td>
@@ -53,12 +57,19 @@
                         <span class="badge bg-primary" (click)="Edit(i); IsAdd=0; IsUpdate=2" data-toggle="modal"
                             data-target="#modelId">Edit</span>
                         <span class="badge bg-danger" (click)="Delete(i)">Delete</span>
-    
+
                     </td>
                 </tr>
             </tbody>
+          
         </table>
+        <div class="pagination-controls">
+            <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDatTaChange($event)">
+            </pagination-controls>
+        </div>
     </div>
+
+    
     <!--Modal-->
     <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -129,10 +140,20 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" *ngIf="IsAdd==1" (click)="Add()">Save</button>
                     <button type="button" class="btn btn-primary" *ngIf="IsUpdate==2" (click)="Update()">Save 1</button>
-                    <button type="button" class="btn btn-secondary" (click)="IsAdd=1; IsUpdate=0" dataismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" (click)="IsAdd=1; IsUpdate=0"
+                        dataismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+<style>
+ .pagination-controls {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin-top: 10px;
+        font-size: 18px;  
+    }
+    
+</style>
