search home, dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header (filteredProductEvent)="receiveFilteredProducts($event)"></app-header> -->
 <!-- <toastr-container></toastr-container> -->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
