--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -11,7 +11,7 @@
 				<div class="product-item">
 					<div class="product-thumb">
 						<!-- <span class="bage">Sale</span> -->
-						<img class="img-responsive" src="{{item.imageUrl}}" alt="product-img" />
+						<img class="img-responsive" src="{{item.imageUrl}}" alt="{{item.productName}}"/>
 						<div class="preview-meta">
 							<ul>
 								<li>
