--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,7 +83,12 @@
 		
 
 
-<app-products [productHome]="products"></app-products>
+
+
+<app-header (filteredProductEvent)="receiveFilteredProducts($event)"></app-header>
+<app-products [productHome]="filteredProducts"></app-products>
+
+
 
 <!--
 Start Call To Action
