--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -8,6 +8,8 @@
   margin-top: 5px;
 }
 </style>
+<app-header></app-header>
+
 <section class="single-product">
 	<div class="container">
 		<div class="row">
