Change data by API JSON

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -30,7 +30,7 @@
                     <tr>
                         <th>Picture</th>
                         <th>Product name</th>
-                        <th>Product type</th>
+                        <!-- <th>Product type</th> -->
                         <th>Price</th>
                         <th>Quantity</th>
                         <th>Total amount</th>
@@ -46,7 +46,7 @@
                           <a href="#!">{{item.Name}}</a>
                         </div>
                       </td>
-                      <td>{{item.Size}} - {{item.Color}}</td>
+                      <!-- <td>{{item.Size}} - {{item.Color}}</td> -->
                       <td class="">{{item.Price|currency}}</td>
                       <td class="">
                         <div class="quantity" style="display: inline-flex;">
@@ -61,7 +61,7 @@
                       </td>
                     </tr>
                     <tr >
-                        <th colspan="3">
+                        <th colspan="2">
                         </th>
                         <th>Sum :</th>
                         <th class="text-center">{{ItemCount()}}</th>
