--- a/src/app/product-list/star/star.component.html
+++ b/src/app/product-list/star/star.component.html
@@ -1,10 +1,11 @@
 <div class="crop" [style.width.px]="starWidth">
     <div style="width: 90px;" (click)="viewRating()">
-        <span style="font-size: 22px;" class="tf-ion-android-star" ></span>
-        <span style="font-size: 22px;" class="tf-ion-android-star"></span>
-        <span style="font-size: 22px;" class="tf-ion-android-star"></span>
-        <span style="font-size: 22px;" class="tf-ion-android-star"></span>
-        <span style="font-size: 22px;" class="tf-ion-android-star"></span>
+        <span  class="tf-ion-android-star" ></span>
+        <span  class="tf-ion-android-star"></span>
+        <span  class="tf-ion-android-star"></span>
+        <span  class="tf-ion-android-star"></span>
+        <span  class="tf-ion-android-star"></span>
         
     </div>
 </div>
+
