--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,7 +72,7 @@
 								<span class="total-price">{{ ItemSum() |currency}}</span>
 							</div>
 							<ul class="text-center cart-buttons">
-								<li><a href="#" [routerLink]="['/cart/',productDetail?.productId]"
+								<li><a href="#" [routerLink]="['/cart/',productDetail?.id]"
 										class="btn btn-small">View Cart</a></li>
 								<li><a href="checkout.html" class="btn btn-small btn-solid-border">Checkout</a></li>
 							</ul>
