--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -11,7 +11,7 @@
 				<div class="product-item">
 					<div class="product-thumb">
 						<!-- <span class="bage">Sale</span> -->
-						<img class="img-responsive" src="{{item.imageUrl}}" alt="{{item.productName}}"/>
+						<img class="img-responsive" src="{{item.thumbnail}}" alt="{{item.title}}"/>
 						<div class="preview-meta">
 							<ul>
 								<li>
@@ -23,13 +23,13 @@
 			                        <a href="#!" ><i class="tf-ion-ios-heart"></i></a>
 								</li>
 								<li>
-									<a href="#!" [routerLink]="['/product-details/',item.productId]"><i class="tf-ion-android-cart"></i></a>
+									<a href="#!" [routerLink]="['/product-details/',item.id]"><i class="tf-ion-android-cart"></i></a>
 								</li>
 							</ul>
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="#" [routerLink]="['/product-details/',item.productId]">{{item.productName}}</a></h4>
+						<h4><a href="#" [routerLink]="['/product-details/',item.id]">{{item.title}}</a></h4>
 						<p class="price">{{item.price | currency:'':''}} VND </p>
 					</div>
 				</div>
