--- a/src/app/shirt/shirt.component.html
+++ b/src/app/shirt/shirt.component.html
@@ -12,7 +12,7 @@
 				<div class="product-item">
 					<div class="product-thumb">
 						<!-- <span class="bage">Sale</span> -->
-						<img class="img-responsive" src="{{item.imageUrl}}" alt="product-img" />
+						<img class="img-responsive" src="{{item.thumbnail}}" alt="product-img" />
 						<div class="preview-meta">
 							<ul>
 								<li>
@@ -24,13 +24,13 @@
 			                        <a href="#!" ><i class="tf-ion-ios-heart"></i></a>
 								</li>
 								<li>
-									<a href="#!" [routerLink]="['/product-details/',item.productId]"><i class="tf-ion-android-cart"></i></a>
+									<a href="#!" [routerLink]="['/product-details/',item.id]"><i class="tf-ion-android-cart"></i></a>
 								</li>
 							</ul>
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="#" [routerLink]="['/product-details/',item.productId]">{{item.productName}}</a></h4>
+						<h4><a href="#" [routerLink]="['/product-details/',item.id]">{{item.title}}</a></h4>
 						<p class="price">{{item.price | currency:'':''}} VND</p>
 					</div>
 				</div>
