backround for edit, update and add

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -44,15 +44,16 @@
                     <th>Color</th> -->
                     <th>Instock</th>
                     <th>Description</th>
-                    <!-- <th>Available</th> -->
+                    <th>Create At</th>
                     <th>Rating</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr
-                    *ngFor="let item of productList  | paginate : { itemsPerPage: tableSize, currentPage: page, totalItems: count } ; let i = index"
+                    *ngFor="let item of filterProductList ; let i = index"
                     [class.editing-row]="i === editingIndex"
+                    [class.new-add]="item.isNewlyAdded"
                     >
                     <td scope="row"><img src="{{item.thumbnail}}" width="50px" alt="" srcset=""></td>
                     <td>{{item.id}}</td>
@@ -65,7 +66,7 @@
                     <td>{{item.discountPercentage}}%</td>
                     <td>{{item.stock}}</td>
                     <td>{{item.description}}</td>
-                    <!-- <td>{{item.releaseDate}}</td> -->
+                    <td>{{item.releaseDate}}</td>
                     <td>
                         <app-star [Rating]="item.rating" [nameRating]="item.title"
                             (outRating)="showRating($event)"></app-star>
@@ -80,10 +81,7 @@
             </tbody>
           
         </table>
-        <div class="pagination-controls">
-            <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDatTaChange($event)">
-            </pagination-controls>
-        </div>
+       
     </div>
 
     
@@ -100,7 +98,8 @@
                 <div class="modal-body">
                     <form [formGroup]="formProduct">
                         <div class="row">
-                            <div class="col-md-6">
+                            
+                            <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="">ProductName</label>
                                     <input type="text" [formControl]="formProduct.controls.title" name="" id=""
@@ -108,7 +107,17 @@
                                     <!--<smallid="helpId"class="text-muted">Helptext</small>-->
                                 </div>
                             </div>
-                         
+                          
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="">Create At</label>
+                                    <input type="date" [formControl]="formProduct.controls.releaseDate" name="" id=""
+                                        class="form-control" placeholder="" aria-describedby="helpId">
+                                    <!--<smallid="helpId"class="text-muted">Helptext</small>-->
+                                </div>
+                            </div>
+                    
+                           
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="">Price</label>
@@ -125,6 +134,7 @@
                                     <!--<smallid="helpId"class="text-muted">Helptext</small>-->
                                 </div>
                             </div>
+                           
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="">Description</label>
@@ -175,8 +185,12 @@
         font-size: 18px;  
     }
 .editing-row {
-  background-color: #dff0d8; /* hoặc bất kỳ màu nào khác để làm nổi bật */
+  background-color: #f9e95a; /* hoặc bất kỳ màu nào khác để làm nổi bật */
+  transition: background-color 1s ease;
 }
 
-    
+.new-add {
+    background-color: greenyellow;
+    transition: background-color 1s ease;
+}   
 </style>
