--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -69,7 +69,7 @@
 					
 					<p>Kho: {{InStock}}</p>
 					
-					<h3 class="product-price">Giá: {{productDetail?.price| currency:'':''}} VND</h3>
+					<h3 class="product-price">Giá: {{productDetail?.price| currency:'':''}}0 VND</h3>
 
 					<p class="product-description mt-20">
 						Mô tả: {{ productDetail?.description}}
