--- a/src/app/product-list/star/star.component.html
+++ b/src/app/product-list/star/star.component.html
@@ -1,4 +1,4 @@
-<div class="crop" [style.width.px]="starWidth">
+<!-- <div class="crop" [style.width.px]="starWidth">
     <div style="width: 90px;" (click)="viewRating()">
         <span  class="tf-ion-android-star" ></span>
         <span  class="tf-ion-android-star"></span>
@@ -7,5 +7,11 @@
         <span  class="tf-ion-android-star"></span>
         
     </div>
-</div>
+</div> -->
+<div class="crop" [style.width.px]="starWidth">
+    <div style="width: 90px;" (click)="viewRating()">
+      <span style="font-size: 23px;" *ngFor="let i of [1, 2, 3, 4, 5]" class="tf-ion-android-star" [class.filled]="i <= Rating"></span>
+      
+    </div>
+  </div>
 
