--- a/src/app/laptop-list/laptop-list.component.html
+++ b/src/app/laptop-list/laptop-list.component.html
@@ -1,27 +1,27 @@
-<app-header></app-header>
 <section class="products section bg-gray">
 	<div class="container">
 		<div class="row">
 			<div class="title text-center">
-				<h2>All Pants</h2>
+				<h2>{{pageTitle}}</h2>
 			</div>
 		</div>
 		<div class="row">
 			
-			<div class="col-md-4" *ngFor="let item of productsByCategory; let i = index">
+			<div class="col-md-4" *ngFor="let item of laptops; let i = index">
 				<div class="product-item">
 					<div class="product-thumb">
 						<!-- <span class="bage">Sale</span> -->
-						<img class="img-responsive" src="{{item.thumbnail}}" alt="product-img" />
+						<img class="img-responsive" src="{{item.thumbnail}}" alt="{{item.title}}"/>
 						<div class="preview-meta">
 							<ul>
 								<li>
-									<span  data-toggle="modal" data-target="#product-modal">
+									<!-- <span  data-toggle="modal" data-target="#product-modal">
 										<i class="tf-ion-ios-search-strong"></i>
-									</span>
+									</span> -->
 								</li>
 								<li>
-			                        <a href="#!" ><i class="tf-ion-ios-heart"></i></a>
+			                        <!-- <a href="#!" ><i class="tf-ion-ios-heart"></i>
+									</a> -->
 								</li>
 								<li>
 									<a href="#!" [routerLink]="['/product-details/',item.id]"><i class="tf-ion-android-cart"></i></a>
@@ -31,7 +31,7 @@
 					</div>
 					<div class="product-content">
 						<h4><a href="#" [routerLink]="['/product-details/',item.id]">{{item.title}}</a></h4>
-						<p class="price">{{item.price | currency:'':''}} VND</p>
+						<p class="price">{{item.price | currency:'':''}}0VND </p>
 					</div>
 				</div>
 			</div>
