--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,37 +1,61 @@
 <div class="container">
-
-   <div class="row">
-    <div class="col-md-5 ">
-        <!-- Modal trigger button -->
-        <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#modelId">
-            Add new
-        </button>
-    </div>
-   </div>
-   
-    <div class="row">
-        <div class="col-md-2 ">
-            <div class="form-inline ">
-              <label for="">Sắp xếp:</label>
-              <select class="form-control" name="" id="" [(ngModel)]="selectedSortOption" (change)="onChangeSort()">
-                <option value="1">Tăng dần theo giá</option>
-                <option value="-1">Giảm dần theo giá</option>
-              </select>
-            </div>
-         </div>
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-        <div class="form-group">
-            <label for=""></label>
-            <input type="text" style="margin-bottom: 12px;" [(ngModel)]="searching"
-            (ngModelChange)="filterResults()" name="searching" id="" class="form-control" placeholder=""
-            placeholder="Tìm sản phẩm" mall>
-        </div>
-    </div>
+<div class="row" style="padding-top: 12px;">
+    <div class="col-md-3" style="padding-top: 20px;">  <button type="button" class="btn btn-small btn-solid-border" style="font-size: 20px;" data-toggle="modal" data-target="#modelId">Add New Product</button></div>
+    <div class="col-md-7"> <div class="form-group">
+        <label for=""></label>
+        <input type="text" style="margin-bottom: 12px;" [(ngModel)]="searching"
+        (ngModelChange)="filterResults()" name="searching" id="" class="form-control" placeholder=""
+        placeholder="Tìm sản phẩm" mall>
+    </div></div>
+    <div class="col-md-2">  <div class="form-inline ">
+        <label for="">Mức giá:</label>
+        <select class="form-control" name="" id="" [(ngModel)]="selectedSortOption" (change)="onChangeSort()">
+          <option value="1">Tăng dần theo giá</option>
+          <option value="-1">Giảm dần theo giá</option>
+        </select>
+      </div></div>
 </div>
+ 
+    
+  <!-- Thêm [formGroup] directive và truyền vào biến formGroup -->
+<!-- <form [formGroup]="formGroup" >
+
+    
+    <div class="form-group">
+      <label for="">From</label>
+      <input type="text" class="form-control" formControlName="priceFrom" aria-describedby="helpId" placeholder="">
+      <small *ngIf="formGroup.get('priceFrom')?.hasError('required') && formGroup.get('priceFrom')?.touched" class="text-danger">
+        Field is required.
+      </small>
+      <small *ngIf="formGroup.get('priceFrom')?.hasError('pattern') && formGroup.get('priceFrom')?.touched" class="text-danger">
+        Please enter a valid number.
+      </small>
+      <small *ngIf="formGroup.get('priceFrom')?.hasError('min') && formGroup.get('priceFrom')?.touched" class="text-danger">
+        Please enter a number greater than or equal to 0.
+      </small>
+    </div>
+    
+    <div class="form-group">
+      <label for="">To:</label>
+      <input type="text" class="form-control" formControlName="priceTo" aria-describedby="helpId" placeholder="">
+      <small *ngIf="formGroup.get('priceTo')?.hasError('required') && formGroup.get('priceTo')?.touched" class="text-danger">
+        Field is required.
+      </small>
+      <small *ngIf="formGroup.get('priceTo')?.hasError('pattern') && formGroup.get('priceTo')?.touched" class="text-danger">
+        Please enter a valid number.
+      </small>
+      <small *ngIf="formGroup.get('priceTo')?.hasError('min') && formGroup.get('priceTo')?.touched" class="text-danger">
+        Please enter a number greater than or equal to 0.
+      </small>
+    </div>
+  
+  </form> -->
+  
+              
+   
 
     <div class="row mt-3 pl-3 pr-3">
-        <table class="parent table table-bordered">
+        <table class="parent table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>Image</th>
@@ -53,7 +77,7 @@
                 <tr
                     *ngFor="let item of filterProductList ; let i = index"
                     [class.editing-row]="i === editingIndex"
-                    [class.new-add]="item.isNewlyAdded"
+                    [class.new-add]="item.showBackground"
                     >
                     <td scope="row"><img src="{{item.thumbnail}}" width="50px" alt="" srcset=""></td>
                     <td>{{item.id}}</td>
@@ -62,7 +86,8 @@
                     <!-- <td>{{item.productCategory}}</td> -->
                     <!-- <td>{{item.productSize}}</td>
                     <td>{{item.productColor}}</td> -->
-                    <td>{{item.price | currency:'':''}}VND</td>
+                    <td>{{ item.price | currency:'':'' }}0VND</td>
+
                     <td>{{item.discountPercentage}}%</td>
                     <td>{{item.stock}}</td>
                     <td>{{item.description}}</td>
@@ -72,16 +97,20 @@
                             (outRating)="showRating($event)"></app-star>
                     </td>
                     <td>
-                        <span class="badge bg-primary" (click)="Edit(i); IsAdd=0; IsUpdate=2" data-toggle="modal"
+                        <span class="badge bg-primary" (click)="Edit(item.id, i); IsAdd=0; IsUpdate=2" data-toggle="modal"
                             data-target="#modelId">Edit</span>
-                        <span class="badge bg-danger" (click)="Delete(i)">Delete</span>
+                        <span class="badge bg-danger" (click)="Delete(item.id)">Delete</span>
 
                     </td>
                 </tr>
             </tbody>
           
         </table>
-       
+        <div class="pagination-controls">
+            <!-- | paginate: { itemsPerPage: tableSize, currentPage: page, totalItems: count }    -->
+            <!-- <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDaTaChange($event)"  [itemsPerPage]="tableSize" [totalItems]="count">
+            </pagination-controls> -->
+        </div>
     </div>
 
     
@@ -98,32 +127,37 @@
                 <div class="modal-body">
                     <form [formGroup]="formProduct">
                         <div class="row">
-                            
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label for="">ProductName</label>
-                                    <input type="text" [formControl]="formProduct.controls.title" name="" id=""
-                                        class="form-control" placeholder="" aria-describedby="helpId">
-                                    <!--<smallid="helpId"class="text-muted">Helptext</small>-->
-                                </div>
+                            <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="">ProductName(*)</label>
+                                <input type="text" [formControl]="formProduct.controls.title" name="" id=""
+                                       class="form-control" placeholder="" aria-describedby="helpId">
+                                       <div *ngIf="formProduct.controls.title.invalid && (formProduct.controls.title.dirty || formProduct.controls.title.touched)" class="text-danger">
+                                        <div *ngIf="formProduct.controls.title.hasError('required')">Field is required.</div>
+                                      </div>
+                              </div>
                             </div>
-                          
+
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="">Create At</label>
+                                    <label for="">Create At(*)</label>
                                     <input type="date" [formControl]="formProduct.controls.releaseDate" name="" id=""
                                         class="form-control" placeholder="" aria-describedby="helpId">
-                                    <!--<smallid="helpId"class="text-muted">Helptext</small>-->
+                                        <div *ngIf="formProduct.controls.releaseDate.invalid && (formProduct.controls.releaseDate.dirty || formProduct.controls.releaseDate.touched)" class="text-danger">
+                                            <div *ngIf="formProduct.controls.releaseDate .hasError('required')">Field is required.</div>
+                                          </div>
                                 </div>
                             </div>
                     
                            
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="">Price</label>
-                                    <input type="number" [formControl]="formProduct.controls.price" name="" id=""
+                                    <label for="">Price(*)</label>
+                                    <input type="number" min="1" [formControl]="formProduct.controls.price" name="" id=""
                                         class="form-control" placeholder="" aria-describedby="helpId">
-                                    <!--<smallid="helpId"class="text-muted">Helptext</small>-->
+                                        <small *ngIf="formProduct.controls.price.hasError('required') && formProduct.controls.price.touched" class="text-danger">
+                                            Field is required.
+                                          </small>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -131,7 +165,9 @@
                                     <label for="">Discount Percentage</label>
                                     <input type="number" [formControl]="formProduct.controls.discountPercentage" name="" id=""
                                         class="form-control" placeholder="" aria-describedby="helpId">
-                                    <!--<smallid="helpId"class="text-muted">Helptext</small>-->
+                                        <!-- <small *ngIf="formProduct.controls.discountPercentage.hasError('required') && formProduct.controls.discountPercentage.touched" class="text-danger">
+                                            Field is required.
+                                          </small> -->
                                 </div>
                             </div>
                            
@@ -140,15 +176,19 @@
                                     <label for="">Description</label>
                                     <input type="text" [formControl]="formProduct.controls.description" name="" id=""
                                         class="form-control" placeholder="" aria-describedby="helpId">
-                                    <!--<smallid="helpId"class="text-muted">Helptext</small>-->
+                                        <!-- <small *ngIf="formProduct.controls.description.hasError('required') && formProduct.controls.description.touched" class="text-danger">
+                                            Field is required.
+                                          </small> -->
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <label for="">Stock</label>
-                                    <input type="text" [formControl]="formProduct.controls.stock" name="" id=""
+                                    <label for="">Stock(*)</label>
+                                    <input type="text" min="1" [formControl]="formProduct.controls.stock" name="" id=""
                                         class="form-control" placeholder="" aria-describedby="helpId">
-                                    <!--<smallid="helpId"class="text-muted">Helptext</small>-->
+                                        <small *ngIf="formProduct.controls.stock.hasError('required') && formProduct.controls.stock.touched" class="text-danger">
+                                            Field is required.
+                                          </small>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -168,9 +208,10 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" *ngIf="IsAdd==1" (click)="Add()">Save</button>
-                    <button type="button" class="btn btn-primary" *ngIf="IsUpdate==2" (click)="Update()">Save 1</button>
                     <button type="button" class="btn btn-secondary" id="closeButton" (click)="IsAdd=1; IsUpdate=0" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" *ngIf="IsAdd==1" [disabled]="formProduct.invalid" (click)=" Add()">Save</button>
+                    <button type="button" class="btn btn-primary" *ngIf="IsUpdate==2" (click)=" Update()">Save 1</button>
+                   
                 </div>
             </div>
         </div>
@@ -185,7 +226,7 @@
         font-size: 18px;  
     }
 .editing-row {
-  background-color: #f9e95a; /* hoặc bất kỳ màu nào khác để làm nổi bật */
+  background-color: #faf2aa; /* hoặc bất kỳ màu nào khác để làm nổi bật */
   transition: background-color 1s ease;
 }
 
