--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,8 +1,8 @@
 <section class="products section bg-gray">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="title text-center">
-				<h2>Trendy Products</h2>
+				<h2>{{pageTitle}}</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -15,12 +15,12 @@
 						<div class="preview-meta">
 							<ul>
 								<li>
-									<span  data-toggle="modal" data-target="#product-modal">
+									<!-- <span  data-toggle="modal" data-target="#product-modal">
 										<i class="tf-ion-ios-search-strong"></i>
-									</span>
+									</span> -->
 								</li>
 								<li>
-			                        <a href="#!" ><i class="tf-ion-ios-heart"></i></a>
+			                        <!-- <a href="#!" ><i class="tf-ion-ios-heart"></i></a> -->
 								</li>
 								<li>
 									<a href="#!" [routerLink]="['/product-details/',item.id]"><i class="tf-ion-android-cart"></i></a>
@@ -30,7 +30,7 @@
 					</div>
 					<div class="product-content">
 						<h4><a href="#" [routerLink]="['/product-details/',item.id]">{{item.title}}</a></h4>
-						<p class="price">{{item.price | currency:'':''}} VND </p>
+						<p class="price">{{item.price | currency:'':''}}0 VND </p>
 					</div>
 				</div>
 			</div>
